--- a/css/style.css
+++ b/css/style.css
@@ -1052,7 +1052,7 @@ h3 {
   /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#F91842+0,fd8e5e+100 */
   background: #F91842;
   font-family: "Raleway", sans-serif;
-  padding: 15px 40px;
+  padding: 13px 10px;
   font-size: 14px;
   font-weight: 600;
   border: 1px solid transparent;
@@ -1060,6 +1060,40 @@ h3 {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
+}
+.buttonIDUst{
+  background: #F91842;
+  font-family: "Raleway", sans-serif;
+  padding: 10px 8px;
+  font-size: 14px;
+  font-weight: 600;
+  border: 1px solid transparent;
+  color: #fff;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+}
+.buttonIDUst:hover{
+  color: white;
+  opacity: 0.7;/*opaklık*/
+  background-color: red;
+}
+.buttonIDBagis{
+  background: #F91842;
+  font-family: "Raleway", sans-serif;
+  padding: 15px 10px;
+  font-size: 14px;
+  font-weight: 600;
+  border: 1px solid transparent;
+  color: #fff;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 10px;
+}
+.buttonIDBagis:hover{
+  color: white;
+  opacity: 0.7;/*opaklık*/
+  background-color: red;
 }
 
 @media (min-width: 992px) and (max-width: 1200px) {
