--- a/css/style.css
+++ b/css/style.css
@@ -1121,7 +1121,7 @@ h3 {
 
 /* line 147, ../../Arafath/CL/Cl November/222. Directory/HTML/scss/_header.scss */
 .header-area .main-header-area .main-menu ul li a {
-  color: #fff;
+  color: black;
   font-size: 15px;
   text-transform: capitalize;
   font-weight: 500;
@@ -1257,7 +1257,8 @@ h3 {
   transition: transform 500ms ease, background 500ms ease;
   -webkit-transition: transform 500ms ease, background 500ms ease;
   box-shadow: 0px 3px 16px 0px rgba(0, 0, 0, 0.1);
-  background: #001D38;
+  /*background: #001D38;*/
+  background:white ;
 }
 
 @media (max-width: 767px) {
@@ -1398,15 +1399,15 @@ h3 {
   }
 }
 
-/* line 1, ../../Arafath/CL/Cl November/222. Directory/HTML/scss/_slider.scss */
+/* line 1, ../../Arafath/CL/Cl November/222. Directory/HTML/scss/_slider.scss 
 .slider_bg_1 {
   background-image: url(../img/banner/banner.png);
-}
+}*/
 
-/* line 4, ../../Arafath/CL/Cl November/222. Directory/HTML/scss/_slider.scss */
+/* line 4, ../../Arafath/CL/Cl November/222. Directory/HTML/scss/_slider.scss 
 .slider_bg_2 {
   background-image: url(../img/banner/banner_2.png);
-}
+}*/
 
 /* line 7, ../../Arafath/CL/Cl November/222. Directory/HTML/scss/_slider.scss */
 .slider_area {
@@ -1415,23 +1416,23 @@ h3 {
 }
 
 /* line 10, ../../Arafath/CL/Cl November/222. Directory/HTML/scss/_slider.scss */
-.slider_area::before {
+/*.slider_area::before {
   /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#001d38+0,001d38+100&1+0,0.6+100 */
-  background: -moz-linear-gradient(left, #001d38 0%, rgba(0, 29, 56, 0.6) 100%);
+  /*background: -moz-linear-gradient(left, #001d38 0%, rgba(0, 29, 56, 0.6) 100%);
   /* FF3.6-15 */
-  background: -webkit-linear-gradient(left, #001d38 0%, rgba(0, 29, 56, 0.6) 100%);
+  /*background: -webkit-linear-gradient(left, #001d38 0%, rgba(0, 29, 56, 0.6) 100%);
   /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to right, #001d38 0%, rgba(0, 29, 56, 0.6) 100%);
+  /*background: linear-gradient(to right, #001d38 0%, rgba(0, 29, 56, 0.6) 100%);
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#001d38', endColorstr='#99001d38',GradientType=1 );
+  /*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#001d38', endColorstr='#99001d38',GradientType=1 );
   /* IE6-9 */
-  position: absolute;
+  /*position: absolute;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
   content: '';
-}
+}*/
 
 /* line 25, ../../Arafath/CL/Cl November/222. Directory/HTML/scss/_slider.scss */
 .slider_area .single_slider {
@@ -5575,7 +5576,7 @@ p #amount {
 
 /* line 195, ../../Arafath/CL/Cl November/222. Directory/HTML/scss/_footer.scss */
 .footer .socail_links ul li:nth-child(2) a {
-  background: #DB4337;
+  background: #fff;
 }
 
 /* line 198, ../../Arafath/CL/Cl November/222. Directory/HTML/scss/_footer.scss */
@@ -5585,7 +5586,7 @@ p #amount {
 
 /* line 201, ../../Arafath/CL/Cl November/222. Directory/HTML/scss/_footer.scss */
 .footer .socail_links ul li:nth-child(4) a {
-  background: #AC907A;
+  background: #cd486b;
 }
 
 /* line 204, ../../Arafath/CL/Cl November/222. Directory/HTML/scss/_footer.scss */
