--- a/scss/_slider.scss
+++ b/scss/_slider.scss
@@ -1,9 +1,9 @@
-.slider_bg_1{
+/*.slider_bg_1{
     background-image: url(../img/banner/banner.png);
 }
 .slider_bg_2{
     background-image: url(../img/banner/banner_2.png);
-}
+}*/
 .slider_area{
     position: relative;
     z-index: 0;
